# Axios-DLS

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: artifact.rs  lib.rs  runtime.rs  scenario.rs  validation.rs
docs/: README.md
docs/architecture/: README.md  axir.md  planner.md  runtime.md
docs/book/: README.md  appendix-artifacts.md  appendix-grammar.md  artifacts.md  fundamentals.md  glossary.md  integration.md  runtime.md  security.md  syntax.md
docs/guide/: first-run.md  hello-world.md  installation.md  pentest-toolkit.md  todo.md  ui-builder.md  ui-builder.uk.md  vision.md
docs/language/: editor-support.md  overview.md  spec.md  types.md
docs/proposals/: secrets-management.md
docs/reference/: README.md  sdk.md
docs/roadmap/: todo.md
examples/: .ui-run-mhanneyh-kp3aohmddg.ax  demo.ax  hello.ax  metasploit.ax
examples/modules/: web.ax
presets/metasploit/: metasploit-schema.json  toolkit.json
scripts/package/linux/: package.sh
scripts/package/windows/: package.ps1
tools/: axion.cmd  axion_repl.py  axion_runner.py
ui/react-flow-prototype/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/react-flow-prototype/src/: App.tsx  dsl.ts  styles.css  types.ts
