[workspace]
members = [
    "core",
    "cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Axion DSL Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
shell-words = "1.1"
quick-xml = "0.37"
time = { version = "0.3", features = ["formatting"] }
comfy-table = "7.1"
